<resources>
    <string name="app_name">MyPlaylistMaker</string>
    <string name="playlist_maker">PlaylistMaker</string>
    <string name="settings_dark_theme">Темная тема</string>
    <string name="settings_share">"Поделиться приложением"</string>
    <string name="settings_support">"Написать в поддержку"</string>
    <string name="settings_cond">"Пользовательское соглашение"</string>
    <string name="search">"Поиск"</string>
    <string name="clear">Стереть</string>
    <string name="Y_P">https://practicum.yandex.ru/android-developer/</string>
    <string name="my_mail">dekgold@gmail.com</string>
    <string name="share_string">Поделиться приложением</string>
    <string name="congrats_str">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanks_str">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="YP_urlOffer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="searchhardcore">%1$s • %2$s</string>
    <string name="dot">%1$s • %2$s</string>
    <string name="yesterday">Yesterday (Remastered 2009)</string>
    <string name="beatles">The Beatles • 2:55</string>
    <string name="artistname">Имя исполнителя</string>
    <string name="ic_icon">ic icon</string>
    <string name="_2_55">2:55</string>
    <string name="nothing_to_show">Ничего не нашлось</string>
    <string name="internet_issue">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="m72_16_66_53l86_31_80_69c86_67_81_04_87_15_81_23_87_65_81_23c88_15_81_22_88_63_81_02_88_98_80_67c89_33_80_32_89_53_79_84_89_54_79_34c89_54_78_84_89_35_78_36_89_78l54_73_43_7c54_56_43_51_54_35_43_37_54_11_43_27c53_88_43_17_53_63_43_12_53_38_43_11c53_13_43_11_52_87_43_16_52_64_43_26c52_41_43_35_52_19_43_49_52_01_43_67c51_84_43_85_51_69_44_06_51_6_44_3c51_5_44_53_51_46_44_78_51_46_45_04c51_46_45_29_51_51_45_54_51_61_45_77c51_71_46_51_86_46_21_52_04_46_39l57_94_52_29c56_71_53_11_55_55_54_06_54_47_55_14c53_49_56_13_52_61_57_2_51_82_58_35c51_68_58_55_51_58_58_79_51_53_59_03c51_47_59_28_51_47_59_53_51_51_59_77c51_6_60_27_51_89_60_71_52_3_61c52_51_61_14_52_74_61_25_52_98_61_3c53_23_61_35_53_48_61_36_53_73_61_31c54_22_61_22_54_66_60_94_54_95_60_52c55_64_59_52_56_4_58_6_57_16_57_83c58_22_56_77_59_41_55_84_60_69_55_05l62_89_57_25c60_27_58_75_58_15_60_99_56_79_63_69c56_57_64_13_56_54_64_65_56_7_65_12c56_86_65_59_57_2_65_98_57_65_66_21c58_09_66_43_58_6_66_48_59_08_66_33c59_55_66_18_59_95_65_85_60_18_65_41c60_74_64_3_61_47_63_3_62_34_62_43c63_32_61_45_64_46_60_65_65_71_60_08l68_39_62_76c66_55_63_17_64_87_64_1_63_55_65_43c62_67_66_32_61_96_67_36_61_47_68_51c61_27_68_97_61_27_69_49_61_45_69_95c61_64_70_42_62_70_79_62_46_71c62_92_71_2_63_44_71_21_63_91_71_03c64_37_70_85_64_75_70_49_64_96_70_03c65_28_69_31_65_71_68_66_66_24_68_13c67_67_37_67_94_66_82_68_98_66_54c70_02_66_26_71_12_66_25_72_16_66_53zm69_62_55_23l73_86_59_47c75_75_60_02_77_46_61_04_78_84_62_43c79_72_63_31_80_45_64_33_81_01_65_44c81_12_65_67_81_27_65_87_81_46_66_04c81_66_66_21_81_88_66_34_82_12_66_42c82_36_66_5_82_61_66_53_82_86_66_51c83_12_66_49_83_36_66_42_83_59_66_31c83_81_66_19_84_01_66_03_84_18_65_84c84_34_65_64_84_46_65_42_84_54_65_18c84_61_64_93_84_64_64_68_84_62_64_43c84_59_64_17_84_52_63_93_84_4_63_71c83_65_62_24_82_69_60_9_81_54_59_73c79_98_58_18_78_12_56_97_76_06_56_19c74_01_55_41_71_81_55_09_69_62_55_23zm63_88_49_48l67_02_52_62c70_62_51_94_74_35_52_33_77_73_53_73c81_12_55_14_84_03_57_5_86_09_60_53c86_23_60_74_86_41_60_91_86_63_61_05c86_84_61_19_87_07_61_28_87_32_61_33c87_56_61_38_87_82_61_37_88_06_61_32c88_31_61_27_88_54_61_17_88_75_61_03c88_96_60_88_89_13_60_7_89_27_60_49c89_4_60_28_89_5_60_04_89_54_59_79c89_59_59_55_89_58_59_29_89_53_59_05c89_47_58_8_89_37_58_57_89_23_58_36c86_5_54_37_82_57_51_36_78_01_49_76c73_45_48_16_68_5_48_06_63_88_49_48zm72_54_70_66c72_81_70_92_73_02_71_24_73_16_71_59c73_31_71_93_73_38_72_31_73_38_72_68c73_38_73_06_73_31_73_43_73_16_73_78c73_02_74_12_72_81_74_44_72_54_74_7c72_28_74_97_71_96_75_18_71_62_75_32c71_27_75_47_70_9_75_54_70_52_75_54c70_15_75_54_69_78_75_47_69_43_75_32c69_08_75_18_68_77_74_97_68_5_74_7c67_97_74_17_67_66_73_44_67_66_72_68c67_66_71_92_67_97_71_19_68_5_70_66c69_04_70_12_69_77_69_82_70_52_69_82c71_28_69_82_72_01_70_12_72_54_70_66z">M72.16,66.53L86.31,80.69C86.67,81.04 87.15,81.23 87.65,81.23C88.15,81.22 88.63,81.02 88.98,80.67C89.33,80.32 89.53,79.84 89.54,79.34C89.54,78.84 89.35,78.36 89,78L54.73,43.7C54.56,43.51 54.35,43.37 54.11,43.27C53.88,43.17 53.63,43.12 53.38,43.11C53.13,43.11 52.87,43.16 52.64,43.26C52.41,43.35 52.19,43.49 52.01,43.67C51.84,43.85 51.69,44.06 51.6,44.3C51.5,44.53 51.46,44.78 51.46,45.04C51.46,45.29 51.51,45.54 51.61,45.77C51.71,46 51.86,46.21 52.04,46.39L57.94,52.29C56.71,53.11 55.55,54.06 54.47,55.14C53.49,56.13 52.61,57.2 51.82,58.35C51.68,58.55 51.58,58.79 51.53,59.03C51.47,59.28 51.47,59.53 51.51,59.77C51.6,60.27 51.89,60.71 52.3,61C52.51,61.14 52.74,61.25 52.98,61.3C53.23,61.35 53.48,61.36 53.73,61.31C54.22,61.22 54.66,60.94 54.95,60.52C55.64,59.52 56.4,58.6 57.16,57.83C58.22,56.77 59.41,55.84 60.69,55.05L62.89,57.25C60.27,58.75 58.15,60.99 56.79,63.69C56.57,64.13 56.54,64.65 56.7,65.12C56.86,65.59 57.2,65.98 57.65,66.21C58.09,66.43 58.6,66.48 59.08,66.33C59.55,66.18 59.95,65.85 60.18,65.41C60.74,64.3 61.47,63.3 62.34,62.43C63.32,61.45 64.46,60.65 65.71,60.08L68.39,62.76C66.55,63.17 64.87,64.1 63.55,65.43C62.67,66.32 61.96,67.36 61.47,68.51C61.27,68.97 61.27,69.49 61.45,69.95C61.64,70.42 62,70.79 62.46,71C62.92,71.2 63.44,71.21 63.91,71.03C64.37,70.85 64.75,70.49 64.96,70.03C65.28,69.31 65.71,68.66 66.24,68.13C67,67.37 67.94,66.82 68.98,66.54C70.02,66.26 71.12,66.25 72.16,66.53ZM69.62,55.23L73.86,59.47C75.75,60.02 77.46,61.04 78.84,62.43C79.72,63.31 80.45,64.33 81.01,65.44C81.12,65.67 81.27,65.87 81.46,66.04C81.66,66.21 81.88,66.34 82.12,66.42C82.36,66.5 82.61,66.53 82.86,66.51C83.12,66.49 83.36,66.42 83.59,66.31C83.81,66.19 84.01,66.03 84.18,65.84C84.34,65.64 84.46,65.42 84.54,65.18C84.61,64.93 84.64,64.68 84.62,64.43C84.59,64.17 84.52,63.93 84.4,63.71C83.65,62.24 82.69,60.9 81.54,59.73C79.98,58.18 78.12,56.97 76.06,56.19C74.01,55.41 71.81,55.09 69.62,55.23ZM63.88,49.48L67.02,52.62C70.62,51.94 74.35,52.33 77.73,53.73C81.12,55.14 84.03,57.5 86.09,60.53C86.23,60.74 86.41,60.91 86.63,61.05C86.84,61.19 87.07,61.28 87.32,61.33C87.56,61.38 87.82,61.37 88.06,61.32C88.31,61.27 88.54,61.17 88.75,61.03C88.96,60.88 89.13,60.7 89.27,60.49C89.4,60.28 89.5,60.04 89.54,59.79C89.59,59.55 89.58,59.29 89.53,59.05C89.47,58.8 89.37,58.57 89.23,58.36C86.5,54.37 82.57,51.36 78.01,49.76C73.45,48.16 68.5,48.06 63.88,49.48ZM72.54,70.66C72.81,70.92 73.02,71.24 73.16,71.59C73.31,71.93 73.38,72.31 73.38,72.68C73.38,73.06 73.31,73.43 73.16,73.78C73.02,74.12 72.81,74.44 72.54,74.7C72.28,74.97 71.96,75.18 71.62,75.32C71.27,75.47 70.9,75.54 70.52,75.54C70.15,75.54 69.78,75.47 69.43,75.32C69.08,75.18 68.77,74.97 68.5,74.7C67.97,74.17 67.66,73.44 67.66,72.68C67.66,71.92 67.97,71.19 68.5,70.66C69.04,70.12 69.77,69.82 70.52,69.82C71.28,69.82 72.01,70.12 72.54,70.66Z</string>
    <string name="switch_text">Тёмная тема</string>
    <string name="cleaR">Очистить</string>
    <string name="searched">Вы искали</string>
    <string name="history_search">История поиска</string>
    <string name="u_searched">Вы искали</string>
    <string name="clear_hist">Очистить историю</string>
    <string name="zero_time">00:00</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="EmptyMedia">Ваша медиатека пуста</string>
    <string name="No1Playlists">Вы не создали ни одного плейлиста</string>
    <string name="Media">Медиатека</string>
    <string name="Playlists">Плейлисты</string>
    <string name="Settings">Настройки</string>
    <string name="Favorites">Избранное</string>
    <string name="no1play">Вы не создали\n ни одного плейлиста</string>
    <string name="FavsTrack">Избранные треки</string>
    <string name="_0_00">0:00</string>
    <string name="start_time">00:00</string>
    <string name="new_playlist_title">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="placeholder_for_playlists">M10.02,22.28C14.03,18.22 18.04,14.55 19.82,15.3C22.68,16.44 19.82,21.2 18.1,24C16.67,26.41 1.72,46.29 1.72,60.15C1.72,67.48 4.47,73.56 9.39,77.22C13.69,80.43 19.36,81.4 24.51,79.86C30.64,78.08 35.68,71.84 42.04,63.99C48.96,55.45 58.24,44.28 65.4,44.28C74.74,44.28 74.85,50.07 75.48,54.54C53.83,58.2 44.67,75.56 44.67,85.3C44.67,95.04 52.92,103 63.05,103C72.39,103 87.62,95.38 89.91,68.06H104V53.73H89.85C89,44.28 83.61,29.67 66.78,29.67C53.89,29.67 42.84,40.62 38.48,45.94C35.16,50.13 26.69,60.15 25.37,61.53C23.94,63.24 21.48,66.34 19.01,66.34C16.44,66.34 14.89,61.58 16.95,55.34C18.96,49.09 24.97,38.95 27.55,35.17C32.01,28.64 34.99,24.17 34.99,16.38C34.99,3.95 25.6,0 20.62,0C13.06,0 6.47,5.73 5.04,7.16C2.98,9.22 1.26,10.94 0,12.49L10.02,22.28ZM63.22,89.08C61.45,89.08 58.99,87.59 58.99,84.95C58.99,81.52 63.17,72.35 75.42,69.14C73.7,84.55 67.23,89.08 63.22,89.08Z</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="p_h">M10.02,22.28C14.03,18.22 18.04,14.55 19.82,15.3C22.68,16.44 19.82,21.2 18.1,24C16.67,26.41 1.72,46.29 1.72,60.15C1.72,67.48 4.47,73.56 9.39,77.22C13.69,80.43 19.36,81.4 24.51,79.86C30.64,78.08 35.68,71.84 42.04,63.99C48.96,55.45 58.24,44.28 65.4,44.28C74.74,44.28 74.85,50.07 75.48,54.54C53.83,58.2 44.67,75.56 44.67,85.3C44.67,95.04 52.92,103 63.05,103C72.39,103 87.62,95.38 89.91,68.06H104V53.73H89.85C89,44.28 83.61,29.67 66.78,29.67C53.89,29.67 42.84,40.62 38.48,45.94C35.16,50.13 26.69,60.15 25.37,61.53C23.94,63.24 21.48,66.34 19.01,66.34C16.44,66.34 14.89,61.58 16.95,55.34C18.96,49.09 24.97,38.95 27.55,35.17C32.01,28.64 34.99,24.17 34.99,16.38C34.99,3.95 25.6,0 20.62,0C13.06,0 6.47,5.73 5.04,7.16C2.98,9.22 1.26,10.94 0,12.49L10.02,22.28ZM63.22,89.08C61.45,89.08 58.99,87.59 58.99,84.95C58.99,81.52 63.17,72.35 75.42,69.14C73.7,84.55 67.23,89.08 63.22,89.08Z</string>
    <string name="add_fav">M67.167,21.167V33.625C67.167,33.625 58.875,33.667 58.833,33.625V21.167H46.333C46.333,21.167 46.375,12.875 46.333,12.833H58.833V0.333H67.167V12.833H79.667V21.167H67.167ZM54.667,37.833V25.333H42.167V12.833H8.833C4.25,12.833 0.5,16.583 0.5,21.167V71.167C0.5,75.75 4.25,79.5 8.833,79.5H58.833C63.417,79.5 67.167,75.75 67.167,71.167V37.833H54.667ZM8.833,71.167L21.333,54.5L29.667,67L42.167,50.333L58.833,71.167H8.833Z</string>
    <string name="smthg">В вашем нижнем листе...</string>
    <string name="new_playlists">New Playlist\n</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="song_title">Song Title</string>
    <string name="_count">0 треков</string>
    <string name="deprecated1">This method has been deprecated in favor of using the\n      {@link OnBackPressedDispatcher} via {@link #getOnBackPressedDispatcher()}.\n      The OnBackPressedDispatcher controls how back button events are dispatched\n      to one or more {@link OnBackPressedCallback} objects.</string>
    <string name="added">Добавлено в плейлист %1$s</string>
    <string name="already_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="new_play_list">Новый плейлист</string>
    <string name="add_to_playlist_new">Добавить в плейлист</string>
    <string name="playlist_str">Плейлист %1$s успешно создан!</string>
    <string name="quit_question">Завершить создание плейлиста?</string>
    <string name="lost_action">Все несохраненные данные будут потеряны</string>
    <string name="playlist_name">Название плейлиста</string>
    <string name="share">Поделиться</string>
    <string name="redactor">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="empty_playlist">В плейлисте нет треков</string>
</resources>