<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newPlayListToolbar"
        app:navigationIcon="@drawable/strelka"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        app:buttonGravity="center_vertical"
        app:title="@string/new_playlist_title"
        app:titleMarginStart="8dp">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/playListImage"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="@dimen/_32dp"
        android:src="@drawable/playlist_holder"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        app:layout_constraintDimensionRatio="H,1:1"/>

    <EditText
        android:id="@+id/playlist_name"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center"
        android:lines="1"
        android:inputType="text"
        android:hint="@string/name"
        android:textColorHint="@color/blacks"
        android:textColor="@color/blacks"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:background="@drawable/editable_false"/>
    <EditText
        android:id="@+id/playListDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center"
        android:lines="1"
        android:inputType="text"
        android:textColorHint="@color/blacks"
        android:textColor="@color/blacks"
        android:textSize="16sp"
        android:hint="@string/description"
        android:paddingStart="16dp"
        android:background="@drawable/editable_false"/>

    <android.widget.Button
        android:id="@+id/createPlaylist"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="17dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/create_pl_button"
        android:enabled="false"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />
</LinearLayout>