<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/WhiteBackgroundLinearLayoutStyle"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".search.ui.SearchFragment"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView style="@style/AppTitleSearchTextView" />

    </LinearLayout>

    <LinearLayout style="@style/SearchLinearLayout">

        <ImageView
            style="@style/SearchImageView"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/editText"
            style="@style/SearchEditText"
            android:hint="@string/search"
            android:maxLength="25"
            android:maxLines="1"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck"
            android:textCursorDrawable="@drawable/cursor"/>

        <ImageView
            android:id="@+id/clearButton"
            style="@style/ClearSearchImageView"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/historyTitle"
        style="@style/PlaceholderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_horizontal"
        android:text="@string/u_searched"
        android:textSize="19sp"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_150dp"
            android:indeterminateTint="@color/purple"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchResultsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_clear"
            style="@style/RefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/button_size"
            android:fontFamily="@font/ys_display_medium"
            android:padding="6dp"
            android:text="@string/clear_hist"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:cornerRadius="22dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/placeholderImage"
        style="@style/PlaceholderNothingStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="102dp"
        android:visibility="gone"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/placeholderText"
        style="@style/PlaceholderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/nothing_to_show"
        android:textSize="19sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_refresh"
        style="@style/RefreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/button_size"
        android:fontFamily="@font/ys_display_medium"
        android:padding="6dp"
        android:text="@string/refresh"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:visibility="gone"
        app:cornerRadius="20dp" />

</LinearLayout>