<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6E8EB">

        <ImageView
            android:id="@+id/imagePlayList"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            app:layout_constraintDimensionRatio="H,1:1"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toTopOf="@id/namePlayList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/strelka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imagePlayList"
            android:backgroundTintMode="@color/black"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            app:buttonGravity="center_vertical"
            app:iconTint="@color/black"
            app:titleMarginStart="@dimen/_16dp"
            app:titleTextColor="@color/black">
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/namePlayList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/namePlayList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagePlayList"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/ys_display_bold">
        </TextView>
        <TextView
            android:id="@+id/descriptionPlayList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/namePlayList"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/ys_display_regular">
        </TextView>
        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionPlayList">
            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:fontFamily="@font/ys_display_regular">
            </TextView>
            <ImageView
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="start|center_vertical"
                android:background="@drawable/playlist_dot">
            </ImageView>
            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:fontFamily="@font/ys_display_regular">
            </TextView>
        </LinearLayout>
        <ImageView
            android:id="@+id/share_playlist"
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            app:layout_constraintEnd_toStartOf="@id/option_playlist"
            app:layout_constraintStart_toStartOf="@id/namePlayList"
            app:layout_constraintTop_toBottomOf="@id/info"
            android:layout_marginTop="16dp"
            android:foregroundGravity="left"
            android:layout_marginBottom="@dimen/_8dp"
            android:src="@drawable/playlist_share">
        </ImageView>
        <ImageView
            android:id="@+id/option_playlist"
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            app:layout_constraintStart_toEndOf="@id/share_playlist"
            app:layout_constraintTop_toBottomOf="@id/info"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:src="@drawable/playlist_options">
        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/playlist_corner"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="280dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@color/sheet_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTracks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="-10dp"
            android:layout_marginEnd="-18dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:foreground="?attr/selectableItemBackground"
            tools:itemCount="5"
            tools:listitem="@layout/track_items" />

        <TextView
            android:id="@+id/emptyListTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/empty_playlist"
            android:visibility="gone"
            android:textSize="16sp"
            android:textColor="@color/blacks"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottomSheetSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/playlist_corner"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="280dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >
        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="#E6E8EB"
            />

        <LinearLayout
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            >

            <ImageView
                android:id="@+id/bsPlayList"
                android:src="@drawable/playlist_placeholder"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginVertical="@dimen/_8dp"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/bsNamePlayList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="14dp"
                    android:gravity="start|center_vertical"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:text="@string/playlist_name"
                    android:textStyle="normal"
                    android:textColor="@color/blacks"
                    android:fontFamily="@font/ys_display_medium"
                    android:ellipsize="end" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bsCountPlayList"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="@dimen/_14sp"
                        android:gravity="start|center_vertical"
                        android:maxLines="1"
                        android:text="@string/_count"
                        android:textColor="@color/greyss"
                        android:textSize="@dimen/_11sp"
                        android:ellipsize="end"
                        android:maxWidth="200dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/ys_display_medium"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/sheetShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:textColor="@color/blacks"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/sheetRedactor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redactor"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_32dp"
            android:textColor="@color/blacks"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/sheetDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_playlist"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_32dp"
            android:textColor="@color/blacks"
            android:textSize="16sp"
            />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>